--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,15 +1,17 @@
+name: Go
+
 on: [push, pull_request]
-name: Test
+
 jobs:
-  test:
-    strategy:
-      matrix:
-        go-version: [1.17.x, 1.18.x]
-        os: [ubuntu-latest, macos-latest, windows-latest]
-    runs-on: ${{ matrix.os }}
+  build:
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-go@v3
+      - uses: actions/checkout@v2
+
+      - name: Set up Go
+        uses: actions/setup-go@v2
         with:
-          go-version: ${{ matrix.go-version }}
-      - uses: actions/checkout@v3
-      - run: go test ./...
+          go-version: 1.18
+
+      - name: Test
+        run: go test -v ./...
