--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Go
+name: Test
 
 on: [push, pull_request]
 
@@ -13,5 +13,7 @@ jobs:
         with:
           go-version: 1.18
 
-      - name: Test
-        run: go test -v ./...
+      - name: Run coverage
+        run: go test -race -coverprofile=coverage.txt -covermode=atomic
+      - name: Upload coverage to Codecov
+        run: bash <(curl -s https://codecov.io/bash)
